<resources>
    <string name="app_name">Bakalarium</string>
    <string name="todo">Todo</string>
    <string name="done">Done</string>
    <string name="archive">Archive</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="school_url">School Bakaláři Address</string>
    <string name="school_url_example">E.g. https://yourschool.bakalari.cz/bakaweb.</string>
    <string name="login">Log in</string>
    <string name="unofficial_app_warning">This app is not the official Bakaláři app. It is not a product of BAKALÁŘI software s.r.o company. The username and password you enter will be stored in your device and in encrypted form sent to the URL you enter into the School Bakaláři Address field.</string>
    <string name="login_1st_person">Log in</string>
    <string name="wrong_username">The username is not correct.</string>
    <string name="wrong_adress">The address does not belong to any Bakaláři server.</string>
    <string name="wrong_password">The password is not correct.</string>
    <string name="school_list">School list</string>
    <string name="error_blank_field">No field can be empty.</string>
    <string name="unknown_error_no_internet">Unknown error or no internet connection.</string>
    <string name="cant_connect">Unable to connect to Bakaláři. Data may not be up-to-date.</string>
    <string name="user_logged_in">User %1$s is now logged in.</string>
    <string name="wrong_address_no_internet">The address does not belong to any Bakaláři server or there is no internet connection.</string>
    <string name="homework_secondary_title_hand_in">Assigned %1$s · Hand in %2$s</string>
    <string name="homework_secondary_title_handed_in">Assigned %1$s · Handed in %2$s</string>
    <string name="mark_done">Mark Done</string>
    <string name="mark_todo">Mark Todo</string>
    <string name="open_attachment">Open attachment</string>
    <string name="open_attachments">Open attachments</string>
    <string name="attachment_download">Downloading homework attachment.</string>
    <string name="permission_needed">The permission is needed in order to download homework attachments.</string>
    <string name="homework_attachments">Homework attachments</string>
    <string name="homework_attachments_permissions">In order to open attachments of your homework, Bakalarium needs to access your phones memory. To be able to do that, you need to grant the permission.</string>
    <string name="homework_attachments_permission_naa">In order to open attachments of your homework, Bakalarium needs to access your phones memory. To be able to do that, you need to grant the permission in system settings.</string>
    <string name="grant_it">Grant it</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="cancel">Cancel</string>
    <string name="settings_permissions">Click permissions and allow Storage.</string>
    <string name="no_app_for_mime">No application capable of opening this attachment is installed.</string>
</resources>
